--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@chakra-ui/react": "^1.6.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "aws-amplify": "^4.0.0",
     "framer-motion": "^4",
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-markdown": "^6.0.2"
   }
 }
